// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The common link component should render primary 1`] = `
<a
  class="prokodo-Link prokodo-Link--has-no-background prokodo-Link--has-no-background--primary"
  data-island="link"
  href="/"
>
  Primary link
</a>
`;

exports[`The common link component should render secondary 1`] = `
<a
  class="prokodo-Link prokodo-Link--has-no-background prokodo-Link--has-no-background--secondary"
  data-island="link"
  href="/"
>
  Secondary link
</a>
`;
